evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_create_iterator(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
    ) -> *mut rocksdb_iterator_t;
}
extern "C" {
    pub fn rocksdb_get_updates_since(
        db: *mut rocksdb_t,
        seq_number: u64,
        options: *const rocksdb_wal_readoptions_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_wal_iterator_t;
}
extern "C" {
    pub fn rocksdb_create_iterator_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
    ) -> *mut rocksdb_iterator_t;
}
extern "C" {
    pub fn rocksdb_create_iterators(
        db: *mut rocksdb_t,
        opts: *mut rocksdb_readoptions_t,
        column_families: *mut *mut rocksdb_column_family_handle_t,
        iterators: *mut *mut rocksdb_iterator_t,
        size: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_create_snapshot(db: *mut rocksdb_t) -> *const rocksdb_snapshot_t;
}
extern "C" {
    pub fn rocksdb_release_snapshot(db: *mut rocksdb_t, snapshot: *const rocksdb_snapshot_t);
}
extern "C" {
    pub fn rocksdb_property_value(
        db: *mut rocksdb_t,
        propname: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_property_int(
        db: *mut rocksdb_t,
        propname: *const ::std::os::raw::c_char,
        out_val: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_property_int_cf(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        propname: *const ::std::os::raw::c_char,
        out_val: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_property_value_cf(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        propname: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_approximate_sizes(
        db: *mut rocksdb_t,
        num_ranges: ::std::os::raw::c_int,
        range_start_key: *const *const ::std::os::raw::c_char,
        range_start_key_len: *const usize,
        range_limit_key: *const *const ::std::os::raw::c_char,
        range_limit_key_len: *const usize,
        sizes: *mut u64,
    );
}
extern "C" {
    pub fn rocksdb_approximate_sizes_cf(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_ranges: ::std::os::raw::c_int,
        range_start_key: *const *const ::std::os::raw::c_char,
        range_start_key_len: *const usize,
        range_limit_key: *const *const ::std::os::raw::c_char,
        range_limit_key_len: *const usize,
        sizes: *mut u64,
    );
}
extern "C" {
    pub fn rocksdb_compact_range(
        db: *mut rocksdb_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_compact_range_cf(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_compact_range_opt(
        db: *mut rocksdb_t,
        opt: *mut rocksdb_compactoptions_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_compact_range_cf_opt(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        opt: *mut rocksdb_compactoptions_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_delete_file(db: *mut rocksdb_t, name: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn rocksdb_livefiles(db: *mut rocksdb_t) -> *const rocksdb_livefiles_t;
}
extern "C" {
    pub fn rocksdb_flush(
        db: *mut rocksdb_t,
        options: *const rocksdb_flushoptions_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_flush_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_flushoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_disable_file_deletions(
        db: *mut rocksdb_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_enable_file_deletions(
        db: *mut rocksdb_t,
        force: ::std::os::raw::c_uchar,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_destroy_db(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_repair_db(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_iter_destroy(arg1: *mut rocksdb_iterator_t);
}
extern "C" {
    pub fn rocksdb_iter_valid(arg1: *const rocksdb_iterator_t) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_iter_seek_to_first(arg1: *mut rocksdb_iterator_t);
}
extern "C" {
    pub fn rocksdb_iter_seek_to_last(arg1: *mut rocksdb_iterator_t);
}
extern "C" {
    pub fn rocksdb_iter_seek(
        arg1: *mut rocksdb_iterator_t,
        k: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_iter_seek_for_prev(
        arg1: *mut rocksdb_iterator_t,
        k: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_iter_next(arg1: *mut rocksdb_iterator_t);
}
extern "C" {
    pub fn rocksdb_iter_prev(arg1: *mut rocksdb_iterator_t);
}
extern "C" {
    pub fn rocksdb_iter_key(
        arg1: *const rocksdb_iterator_t,
        klen: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_iter_value(
        arg1: *const rocksdb_iterator_t,
        vlen: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_iter_get_error(
        arg1: *const rocksdb_iterator_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_wal_iter_next(iter: *mut rocksdb_wal_iterator_t);
}
extern "C" {
    pub fn rocksdb_wal_iter_valid(arg1: *const rocksdb_wal_iterator_t) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_wal_iter_status(
        iter: *const rocksdb_wal_iterator_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_wal_iter_get_batch(
        iter: *const rocksdb_wal_iterator_t,
        seq: *mut u64,
    ) -> *mut rocksdb_writebatch_t;
}
extern "C" {
    pub fn rocksdb_get_latest_sequence_number(db: *mut rocksdb_t) -> u64;
}
extern "C" {
    pub fn rocksdb_wal_iter_destroy(iter: *const rocksdb_wal_iterator_t);
}
extern "C" {
    pub fn rocksdb_writebatch_create() -> *mut rocksdb_writebatch_t;
}
extern "C" {
    pub fn rocksdb_writebatch_create_from(
        rep: *const ::std::os::raw::c_char,
        size: usize,
    ) -> *mut rocksdb_writebatch_t;
}
extern "C" {
    pub fn rocksdb_writebatch_destroy(arg1: *mut rocksdb_writebatch_t);
}
extern "C" {
    pub fn rocksdb_writebatch_clear(arg1: *mut rocksdb_writebatch_t);
}
extern "C" {
    pub fn rocksdb_writebatch_count(arg1: *mut rocksdb_writebatch_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_writebatch_put(
        arg1: *mut rocksdb_writebatch_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_put_cf(
        arg1: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_putv(
        b: *mut rocksdb_writebatch_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_putv_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_merge(
        arg1: *mut rocksdb_writebatch_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_merge_cf(
        arg1: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_mergev(
        b: *mut rocksdb_writebatch_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_mergev_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_delete(
        arg1: *mut rocksdb_writebatch_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_singledelete(
        b: *mut rocksdb_writebatch_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_delete_cf(
        arg1: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_singledelete_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_deletev(
        b: *mut rocksdb_writebatch_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_deletev_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
    );
}
